    debian/patches/ipp-backend-http-1.0-fallback-fix.patch: Replaced patch
    for downgrading to the IPP backend to the version of CUPS 1.4.x by patches
    for the current backend (LP: #879625, LP: #881843, CUPS STR #3985,
    CUPS STR #3986, CUPS STR #3988, thanks to Robert Bradley, robert dot
    bradley1 at gmail dot com, for the patches).
  * debian/patches/cups-avahi.patch,
    debian/patches/usb-backend-libusb-1.0.patch,
    debian/patches/drop_unnecessary_dependencies.patch,
    debian/patches/printer-filtering.patch:
    Manually regenerated to adapt to upstream changes.
  * debian/patches/pidfile.patch,
    debian/patches/rootbackends-worldreadable.patch,
    debian/patches/colord-support.patch,
    debian/patches/airprint-support.patch,
    debian/patches/no-conffile-timestamp.patch,
    debian/patches/read-embedded-options-from-incoming-postscript-and-add-to-ipp-attrs.patch,
    debian/patches/do-not-broadcast-with-hostnames.patch,
    debian/patches/do-not-suppress-inputslot-setting-with-empty-ap-d-inputslot.patch,
    debian/patches/confdirperms.patch,
    debian/patches/show-compile-command-lines.patch,
    debian/patches/log-debug-history-nearly-unlimited.patch,
    debian/patches/dnssd-reg-array-linear-search.patch:
    Refreshed using quilt.
  * debian/patches/fix-supply-level-computation-for-percent-supply-unit.patch,
    debian/patches/fix-supply-levels-for-enumerated-prtmarkersupplieslevel.patch,
    debian/patches/fix-status-reports-when-supply-levels-grow.patch:
    The printer supply levels reported via SNMP, according to the printer MIB
    were not correctly interpreted (LP: #925086, CUPS STR #4016, thanks to
    Peter Hurley, peter at hurleysoftware dot com, for the patches).
  * debian/patches/add-status-reports-for-full-waste-trays-and-cleaner-unit-eol.patch:
    Added status reports for waste tray status and cleaner unit end-of-life
    (LP: #925086, CUPS STR #4017, thanks to Peter Hurley, peter at